# cubix

./: .gitignore  CMakeBackup.txt  CMakeLists.txt  README.md  cmake.txt  main.cpp  makefile  pytest.py  todo.todo
.github/workflows/: ci.yml  release.yml
docs/: UsefulLinks.md
inc/: common.hpp  cube.hpp  moves.hpp
interface/: cubix.i
src/: common.cpp  common.h  cube.cpp  cube.hpp  moves.cpp
src/moves/: B.cpp  D.cpp  E.cpp  F.cpp  L.cpp  M.cpp  R.cpp  S.cpp  U.cpp  X.cpp  Y.cpp  Z.cpp
tests/: CMakeLists.txt  test_main.cpp  test_moves.cpp
tests/solutions/: solved.toml
tests/solutions/composite/: checkers.toml  scramble.toml
tests/solutions/faces/: B.toml  B2.toml  B_prime.toml  D.toml  D2.toml  D_prime.toml  F.toml  F2.toml  F_prime.toml  L.toml  L2.toml  L_prime.toml  R.toml  R2.toml  R_prime.toml  U.toml  U2.toml  U_prime.toml
tests/solutions/rotation/: X.toml  X2.toml  X_prime.toml  Y.toml  Y2.toml  Y_prime.toml  Z.toml  Z2.toml  Z_prime.toml
tests/solutions/slices/: E.toml  E2.toml  E_prime.toml  M.toml  M2.toml  M_prime.toml  S.toml  S2.toml  S_prime.toml
tests/solutions/wide/: b.toml  b2.toml  b_prime.toml  d.toml  d2.toml  d_prime.toml  f.toml  f2.toml  f_prime.toml  l.toml  l2.toml  l_prime.toml  r.toml  r2.toml  r_prime.toml  u.toml  u2.toml  u_prime.toml
